grammar/CrawLangParser.py
# Generated from CrawLang.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CrawLangParser ( Parser ):

    grammarFileName = "CrawLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'char'", "'int'", "'if'", "'else'", 
                     "'for'", "'return'", "'not'", "'and'", "'or'", "'print'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "';'", 
                     "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'<<'", "'>>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SPACE", "COMMENT_BLOCK", "COMMENT_LINE", "VALID_VARIABLE_NAME", 
                      "LITERAL", "INT", "CHAR", "COMMA", "SEMICOLON", "LPAREN", 
                      "RPAREN", "LCURL", "RCURL", "PLUS", "MINUS", "TIMES", 
                      "DIVIDE", "MOD", "ASSIGN", "EQ", "NEQ", "LTHAN", "GTHAN", 
                      "LEQ", "GEQ", "SHIFT_LEFT", "SHIFT_RIGHT" ]

    RULE_funclist = 0
    RULE_function_def = 1
    RULE_main_func = 2
    RULE_func_header = 3
    RULE_func_name_decl = 4
    RULE_formal_list = 5
    RULE_base_type = 6
    RULE_statement = 7
    RULE_block = 8
    RULE_decl = 9
    RULE_assignment_statement = 10
    RULE_if_stmt = 11
    RULE_else_part = 12
    RULE_for_loop = 13
    RULE_loop_cntrl = 14
    RULE_loop_init = 15
    RULE_loop_cond = 16
    RULE_loop_incr = 17
    RULE_return_statement = 18
    RULE_primary_expr = 19
    RULE_assignment = 20
    RULE_postfix_expr = 21
    RULE_boolneg_expr = 22
    RULE_sign_expr = 23
    RULE_mul_expr = 24
    RULE_add_expr = 25
    RULE_shift_expr = 26
    RULE_rel_expr = 27
    RULE_eq_expr = 28
    RULE_lmul_expr = 29
    RULE_expr = 30
    RULE_arg_list = 31
    RULE_print = 32
    RULE_function_call = 33

    ruleNames =  [ "funclist", "function_def", "main_func", "func_header", 
                   "func_name_decl", "formal_list", "base_type", "statement", 
                   "block", "decl", "assignment_statement", "if_stmt", "else_part", 
                   "for_loop", "loop_cntrl", "loop_init", "loop_cond", "loop_incr", 
                   "return_statement", "primary_expr", "assignment", "postfix_expr", 
                   "boolneg_expr", "sign_expr", "mul_expr", "add_expr", 
                   "shift_expr", "rel_expr", "eq_expr", "lmul_expr", "expr", 
                   "arg_list", "print", "function_call" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    SPACE=12
    COMMENT_BLOCK=13
    COMMENT_LINE=14
    VALID_VARIABLE_NAME=15
    LITERAL=16
    INT=17
    CHAR=18
    COMMA=19
    SEMICOLON=20
    LPAREN=21
    RPAREN=22
    LCURL=23
    RCURL=24
    PLUS=25
    MINUS=26
    TIMES=27
    DIVIDE=28
    MOD=29
    ASSIGN=30
    EQ=31
    NEQ=32
    LTHAN=33
    GTHAN=34
    LEQ=35
    GEQ=36
    SHIFT_LEFT=37
    SHIFT_RIGHT=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FunclistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_func(self):
            return self.getTypedRuleContext(CrawLangParser.Main_funcContext,0)


        def EOF(self):
            return self.getToken(CrawLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CrawLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(CrawLangParser.StatementContext,i)


        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CrawLangParser.Function_defContext)
            else:
                return self.getTypedRuleContext(CrawLangParser.Function_defContext,i)


        def getRuleIndex(self):
            return CrawLangParser.RULE_funclist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunclist" ):
                listener.enterFunclist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunclist" ):
                listener.exitFunclist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunclist" ):
                return visitor.visitFunclist(self)
            else:
                return visitor.visitChildren(self)




    def funclist(self):

        localctx = CrawLangParser.FunclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_funclist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 68
                        self.statement()
                        pass

                    elif la_ == 2:
                        self.state = 69
                        self.function_def()
                        pass

             
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 75
            self.main_func()
            self.state = 76
            self.match(CrawLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_header(self):
            return self.getTypedRuleContext(CrawLangParser.Func_headerContext,0)


        def block(self):
            return self.getTypedRuleContext(CrawLangParser.BlockContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_def" ):
                return visitor.visitFunction_def(self)
            else:
                return visitor.visitChildren(self)




    def function_def(self):

        localctx = CrawLangParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.func_header()
            self.state = 79
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CrawLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CrawLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(CrawLangParser.BlockContext,0)


        def base_type(self):
            return self.getTypedRuleContext(CrawLangParser.Base_typeContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_main_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_func" ):
                listener.enterMain_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_func" ):
                listener.exitMain_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_func" ):
                return visitor.visitMain_func(self)
            else:
                return visitor.visitChildren(self)




    def main_func(self):

        localctx = CrawLangParser.Main_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==3:
                self.state = 81
                self.base_type()


            self.state = 84
            self.match(CrawLangParser.T__0)
            self.state = 85
            self.match(CrawLangParser.LPAREN)
            self.state = 86
            self.match(CrawLangParser.RPAREN)
            self.state = 87
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_name_decl(self):
            return self.getTypedRuleContext(CrawLangParser.Func_name_declContext,0)


        def LPAREN(self):
            return self.getToken(CrawLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CrawLangParser.RPAREN, 0)

        def formal_list(self):
            return self.getTypedRuleContext(CrawLangParser.Formal_listContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_func_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_header" ):
                listener.enterFunc_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_header" ):
                listener.exitFunc_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_header" ):
                return visitor.visitFunc_header(self)
            else:
                return visitor.visitChildren(self)




    def func_header(self):

        localctx = CrawLangParser.Func_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.func_name_decl()
            self.state = 90
            self.match(CrawLangParser.LPAREN)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==3:
                self.state = 91
                self.formal_list()


            self.state = 94
            self.match(CrawLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_name_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VALID_VARIABLE_NAME(self):
            return self.getToken(CrawLangParser.VALID_VARIABLE_NAME, 0)

        def base_type(self):
            return self.getTypedRuleContext(CrawLangParser.Base_typeContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_func_name_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_name_decl" ):
                listener.enterFunc_name_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_name_decl" ):
                listener.exitFunc_name_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_name_decl" ):
                return visitor.visitFunc_name_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_name_decl(self):

        localctx = CrawLangParser.Func_name_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_name_decl)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(CrawLangParser.VALID_VARIABLE_NAME)
                pass
            elif token in [2, 3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.base_type()
                self.state = 98
                self.match(CrawLangParser.VALID_VARIABLE_NAME)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formal_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CrawLangParser.Base_typeContext)
            else:
                return self.getTypedRuleContext(CrawLangParser.Base_typeContext,i)


        def VALID_VARIABLE_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(CrawLangParser.VALID_VARIABLE_NAME)
            else:
                return self.getToken(CrawLangParser.VALID_VARIABLE_NAME, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CrawLangParser.COMMA)
            else:
                return self.getToken(CrawLangParser.COMMA, i)

        def getRuleIndex(self):
            return CrawLangParser.RULE_formal_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal_list" ):
                listener.enterFormal_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal_list" ):
                listener.exitFormal_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_list" ):
                return visitor.visitFormal_list(self)
            else:
                return visitor.visitChildren(self)




    def formal_list(self):

        localctx = CrawLangParser.Formal_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formal_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.base_type()
            self.state = 103
            self.match(CrawLangParser.VALID_VARIABLE_NAME)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 104
                self.match(CrawLangParser.COMMA)
                self.state = 105
                self.base_type()
                self.state = 106
                self.match(CrawLangParser.VALID_VARIABLE_NAME)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CrawLangParser.RULE_base_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase_type" ):
                listener.enterBase_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase_type" ):
                listener.exitBase_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase_type" ):
                return visitor.visitBase_type(self)
            else:
                return visitor.visitChildren(self)




    def base_type(self):

        localctx = CrawLangParser.Base_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_base_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(CrawLangParser.BlockContext,0)


        def print_(self):
            return self.getTypedRuleContext(CrawLangParser.PrintContext,0)


        def assignment_statement(self):
            return self.getTypedRuleContext(CrawLangParser.Assignment_statementContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(CrawLangParser.If_stmtContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(CrawLangParser.For_loopContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(CrawLangParser.Return_statementContext,0)


        def function_call(self):
            return self.getTypedRuleContext(CrawLangParser.Function_callContext,0)


        def SEMICOLON(self):
            return self.getToken(CrawLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CrawLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CrawLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.print_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.assignment_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.if_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.for_loop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.return_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.function_call()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 122
                self.match(CrawLangParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURL(self):
            return self.getToken(CrawLangParser.LCURL, 0)

        def RCURL(self):
            return self.getToken(CrawLangParser.RCURL, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CrawLangParser.DeclContext)
            else:
                return self.getTypedRuleContext(CrawLangParser.DeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CrawLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(CrawLangParser.StatementContext,i)


        def getRuleIndex(self):
            return CrawLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CrawLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CrawLangParser.LCURL)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 78744028) != 0):
                self.state = 128
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3]:
                    self.state = 126
                    self.decl()
                    pass
                elif token in [4, 6, 7, 8, 11, 15, 16, 20, 21, 23, 26]:
                    self.state = 127
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(CrawLangParser.RCURL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base_type(self):
            return self.getTypedRuleContext(CrawLangParser.Base_typeContext,0)


        def VALID_VARIABLE_NAME(self, i:int=None):
            if i is None:
                return self.getTokens(CrawLangParser.VALID_VARIABLE_NAME)
            else:
                return self.getToken(CrawLangParser.VALID_VARIABLE_NAME, i)

        def SEMICOLON(self):
            return self.getToken(CrawLangParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CrawLangParser.COMMA)
            else:
                return self.getToken(CrawLangParser.COMMA, i)

        def getRuleIndex(self):
            return CrawLangParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = CrawLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.base_type()
            self.state = 136
            self.match(CrawLangParser.VALID_VARIABLE_NAME)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 137
                self.match(CrawLangParser.COMMA)
                self.state = 138
                self.match(CrawLangParser.VALID_VARIABLE_NAME)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(CrawLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(CrawLangParser.AssignmentContext,0)


        def SEMICOLON(self):
            return self.getToken(CrawLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CrawLangParser.RULE_assignment_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_statement" ):
                listener.enterAssignment_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_statement" ):
                listener.exitAssignment_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_statement" ):
                return visitor.visitAssignment_statement(self)
            else:
                return visitor.visitChildren(self)




    def assignment_statement(self):

        localctx = CrawLangParser.Assignment_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.assignment()
            self.state = 147
            self.match(CrawLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(CrawLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(CrawLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(CrawLangParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(CrawLangParser.StatementContext,0)


        def else_part(self):
            return self.getTypedRuleContext(CrawLangParser.Else_partContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = CrawLangParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(CrawLangParser.T__3)
            self.state = 150
            self.match(CrawLangParser.LPAREN)
            self.state = 151
            self.expr()
            self.state = 152
            self.match(CrawLangParser.RPAREN)
            self.state = 153
            self.statement()
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 154
                self.else_part()
                pass

            elif la_ == 2:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(CrawLangParser.StatementContext,0)


        def getRuleIndex(self):
            return CrawLangParser.RULE_else_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_part" ):
                listener.enterElse_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_part" ):
                listener.exitElse_part(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_part" ):
                return visitor.visitElse_part(self)
            else:
                return visitor.visitChildren(self)



